sql/sql_plugin.cc
@@ -2900,10 +2900,11 @@ static uchar *intern_sys_var_ptr(THD* thd, int offset, bool global_lock)
   DBUG_ENTER("intern_sys_var_ptr");
   DBUG_ASSERT(offset >= 0);
   DBUG_ASSERT((uint)offset <= global_system_variables.dynamic_variables_head);
-  mysql_mutex_assert_not_owner(&LOCK_open);
 
   if (!thd)
     DBUG_RETURN((uchar*) global_system_variables.dynamic_variables_ptr + offset);
+
+  mysql_mutex_assert_not_owner(&LOCK_open);
 
   /*
     dynamic_variables_head points to the largest valid offset
